configure: don't read QMAKESPEC from the environment

it was rather unexpected that this was done, entirely inconsistently
with how the rest of the configure parameters are handled.

Task-number: QTBUG-52266
Change-Id: I6e1d7a4fe1c85d6d64d465517b6be3f3cdda3359
Reviewed-by: Lars Knoll <lars.knoll@qt.io>